docker file updated

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,17 @@ WORKDIR /app
 COPY --from=prod_deps /app/node_modules ./node_modules
 COPY . .
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["npm", "start"]  
+
+# we can add non root user to make it more secure -- If your Node.js app gets hacked, the attacker won’t have root inside the container.---
+# Non-root users cannot:
+#  install packages
+#  modify system directories
+#  change OS files   
+ 
+# # Create non-root user
+    # RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Switch to that user
+    # USER appuser
+
